--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.3.0",
     "antd-mobile": "^2.1.6",
     "axios": "^0.18.0",
     "react": "^16.2.0",
@@ -17,5 +18,20 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:4000/"
+  "proxy":{
+    "/api":{
+       "target": "http://localhost:4000/",
+       "changeOrigin": true,
+       "pathRewrite": {
+        "^/api": ""
+      }
+     },
+     "/express": {
+      "target": "http://localhost:5000/",
+      "changeOrigin": true,
+      "pathRewrite": {
+        "^/express": ""
+      }
+     }
+   }
 }
