--- a/package.json
+++ b/package.json
@@ -33,5 +33,9 @@
         "^/express": ""
       }
     }
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.6.7",
+    "react-app-rewired": "^1.5.0"
   }
 }
