--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-transition-group": "^2.3.0",
     "styled-components": "^3.2.1"
   },
   "scripts": {
