--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "immutable": "^3.8.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.3.0",
+    "redux": "^3.7.2",
     "styled-components": "^3.2.1"
   },
   "scripts": {
